prevent reading room button from wrapping

--- a/src/styles/components/_my-list.scss
+++ b/src/styles/components/_my-list.scss
@@ -3,7 +3,8 @@
 .mylist main {
   @include grid-column(12);
   @include lg-up {
-    @include grid-column(8);
+    width: 66%;
+    box-sizing: border-box;
   }
 }
 
@@ -18,11 +19,10 @@
 }
 
 .mylist__sidebar {
-  @include grid-column(4);
+  width: 34%;
   background: $off-white;
   float: right;
-  margin-left: 45px;
-  margin-right: -45px;
+  margin-right: -30px;
   padding: 60px 0px 60px 40px;
   box-sizing: border-box;
   display: flex;
